# sdkbox-sample-ccc3

./: .gitignore  .sdkbox_packages.json  README.md  package.json  tsconfig.json
assets/scene/: main.scene
assets/scenes/: main.scene
assets/scripts/: main.ts
native/engine/android/: CMakeLists.txt
native/engine/android/app/: AndroidManifest.xml  build.gradle
native/engine/android/app/jni/PluginAdMob/: PluginAdMob.h
native/engine/android/app/src/com/cocos/game/: AppActivity.java
native/engine/android/res/values/: strings.xml
native/engine/common/: sdkboxUtils.cmake
native/engine/common/Classes/: PluginIAPJS.cpp  PluginIAPJS.hpp  PluginIAPJSHelper.cpp  PluginIAPJSHelper.h  SDKBoxJSHelper.h  jsb_module_register.cpp
native/engine/common/assets/: sdkbox_config.json
native/engine/ios/: AppDelegate.mm  CMakeLists.txt  Info.plist
